sytle(dashboard): fix weather on mobile

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -486,7 +486,7 @@ body{
 
 #weather h5 {
 	float: right;
-	font-size: 40px;
+	font-size: 6em;
 	width: 100%;
 	text-align:right;
 	/*margin-top: 18px;*/
@@ -494,7 +494,7 @@ body{
 #weather p {
 	float: right;
 	text-align: right;
-	font-size: 30px;
+	font-size: 4em;
 	/*margin-top: 35px;*/
 }
 
